--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,34 @@
-html,
-body {
-  padding: 0;
+/*
+=============== 
+Global Styles
+===============
+*/
+  
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
 }
-
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #f5f5f5;
+  color: #102a42;
+}
+ul {
+  list-style-type: none;
+}
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.loading{
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  display:inline-block;
+  text-align: center;
+  margin: 0 auto;
 }
